--- a/project/index.html
+++ b/project/index.html
@@ -18,7 +18,7 @@
       <h1>
         Do you wanna listen to classical music?      
       </h1>
-    </div>
+    </div> <!-- snowman -->
     <div class="enter">
       <div class="title">
         
@@ -76,15 +76,21 @@
             <option value="31"  id="31">31</option>
           </select> 
         </div>
-     </div>
+     </div> <!-- title -->
 
-     <button class="button">Listen!</button>
-    </div>
-  </div>
+     <button class="listen button">Listen!</button>
+    </div> <!-- enter -->
+    <div class="browse-banner">
+      <h2 id="browse-title">
+        Or Browse?
+      </h2>
+      <button class="close button">Close</button>
+
+    </div>  <!-- browse -->
+  </div>  <!-- herderbox -->
 
 
 
-
-</div>
+</div> <!-- all -->
 </body>
 </html>
