--- a/project/index.html
+++ b/project/index.html
@@ -81,10 +81,11 @@
      <button class="listen button">Listen!</button>
     </div> <!-- enter -->
     <div class="browse-banner">
-      <h2 id="browse-title">
-        Or Browse?
-      </h2>
-      <button class="close button">Close</button>
+      <h2 id="browse-title">Or Browse?</h2>
+      <h3>Mozart Loves you</h3>
+      <div id="mozartsmall"></div>
+      <!-- <img src="material/image/mozartsmall.jpg" alt="mozartsmall" id="mozartsmall mozarthidden"> -->
+      <!-- <button class="close button">Close</button> -->
 
     </div>  <!-- browse -->
   </div>  <!-- herderbox -->
