--- a/project/index.html
+++ b/project/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
 <div class="all">
-  <div class="headerbox">
+  <button class="button" id="modal-open">Enter Birthday?</button>
+  <div class="headerbox modal">
     <div class="snowman">
       <h1>
         Do you wanna listen to classical music?      
@@ -83,12 +84,15 @@
     <div class="browse-banner">
       <h2 id="browse-title">Or Browse?</h2>
       <h3>Mozart Loves you</h3>
-      <div id="mozartsmall"></div>
+      <div class="mozartsmall" id="modal-close"></div>
       <!-- <img src="material/image/mozartsmall.jpg" alt="mozartsmall" id="mozartsmall mozarthidden"> -->
       <!-- <button class="close button">Close</button> -->
 
     </div>  <!-- browse -->
   </div>  <!-- herderbox -->
+  
+  
+  
   <main id="main">
     <div id="musician">
 
