--- a/project/index.html
+++ b/project/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Zodiac</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="zodiacstylesheet.css">
     <link rel="stylesheet" href="font.css">
-    <script src="javascript.js"></script>
+    <script src="zodiacjavascript.js"></script>
     
     
 </head>
-<body>
+<body class="noscroll">
 <div class="all">
   <button class="button" id="modal-open">Enter Birthday?</button>
-  <div class="headerbox modal">
+  <div class="headerbox modal transparent hidden">
     <div class="snowman">
       <h1>
         Do you wanna listen to classical music?      
@@ -93,8 +93,134 @@
   
   
   
-  <main id="main">
-    <div id="musician">
+  <main id="main" >
+    <div class="musician-banner">
+
+
+
+        <ul class="musician">
+          <li id="m1">
+            <div class="card">
+              <img src="material/image/bach.jpg" alt="1" class="frontface">
+              <div class="backface">
+                <h3>Bach</h3>
+              </div>
+           </div>
+          </li>
+
+          <li id="m2">
+            <div class="card">
+              <img src="material/image/beethoven.jpg" alt="2" class="frontface">
+              <div class="backface">
+                <h3>Beethoven</h3>
+              </div>
+             </div>
+          </li>
+
+          <li id="m3">
+            <div class="card">
+              <img src="material/image/chopin.jpg" alt="3" class="frontface">
+              <div class="backface">
+                <h3>Chopin</h3>
+              </div>
+            </div>
+          </li>
+
+          <li id="m4">
+            <div class="card">
+              <img src="material/image/debussy.jpg" alt="4" class="frontface">
+              <div class="backface">
+                <h3>Debussy</h3>
+              </div>
+            </div>
+          </li>
+
+          <li id="m5">
+            <div class="card">
+              <img src="material/image/liszt.jpeg" alt="5" class="frontface">
+              <div class="backface">
+                <h3>Liszt</h3>
+              </div>
+           </div>
+          </li>
+
+          <li id="m6">
+            <div class="card">
+              <img src="material/image/mendelson.jpeg" alt="6" class="frontface">
+              <div class="backface">
+                <h3>Mendelson</h3>
+              </div>
+            </div>
+          </li>
+
+          <li id="m7">
+            <div class="card">
+              <img src="material/image/mozart.jpg" alt="7" class="frontface">
+              <div class="backface">
+                <h3>Mozart</h3>
+              </div>
+            </div>
+          </li>
+
+          <li id="m8">
+            <div class="card">
+              <img src="material/image/satie.jpg" alt="8" class="frontface">
+              <div class="backface">
+                <h3>Satie</h3>
+              </div>
+           </div>
+          </li>
+
+          <li id="m9">
+            <div class="card">
+              <img src="material/image/schubert.jpg" alt="9" class="frontface">
+              <div class="backface">
+                <h3>Schubert</h3>
+              </div>
+           </div>
+          </li>
+
+          <li id="m10">
+            <div class="card">
+              <img src="material/image/schumann.jpg" alt="10" class="frontface">
+              <div class="backface">
+                <h3>Schumann</h3>
+              </div>
+           </div>
+          </li>
+
+          <li id="m11">
+            <div class="card">
+              <img src="material/image/liszt2.jpg" alt="11" class="frontface">
+              <div class="backface">
+                <h3>Liszt</h3>
+              </div>
+            </div>
+          </li>
+
+          <li id="m12">
+            <div class="card">
+              <img src="material/image/mozart2.jpg" alt="12" class="frontface">
+              <div class="backface">
+                <h3>Mozart</h3>
+              </div>
+            </div>
+          </li>
+
+        </ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     </div> <!-- musician -->
   </main>
