--- a/project/index.html
+++ b/project/index.html
@@ -13,13 +13,14 @@
 </head>
 <body class="noscroll">
 <div class="all">
-  <button class="button" id="modal-open">Enter Birthday?</button>
-  <div class="headerbox modal transparent hidden">
+  <button class="button hidden" id="modal-open">Enter Birthday?</button>
+  <div class="headerbox" id="modal">
     <div class="snowman">
       <h1>
         Do you wanna listen to classical music?      
       </h1>
     </div> <!-- snowman -->
+    <!-- left enter birthday -->
     <div class="enter">
       <div class="title">
         
@@ -81,6 +82,7 @@
 
      <button class="listen button">Listen!</button>
     </div> <!-- enter -->
+    <!-- right click mozart -->
     <div class="browse-banner">
       <h2 id="browse-title">Or Browse?</h2>
       <h3>Mozart Loves you</h3>
@@ -95,9 +97,6 @@
   
   <main id="main" >
     <div class="musician-banner">
-
-
-
         <ul class="musician">
           <li id="m1">
             <div class="card">
