啊啊啊啊啊

--- a/project/index.html
+++ b/project/index.html
@@ -27,7 +27,12 @@
           Birthday?
         </h2>
           <div class="birthdayform">
-          <select class="month">
+            <input type="text" class="month" maxlength="2">
+            <input type="text" class='day' maxlength="2">
+
+
+
+          <!-- <select class="month">
             <option selected disabled>--Choose an option--</option>
             <option value="1" >1</option>
             <option value="2" >2</option>
@@ -41,8 +46,8 @@
             <option value="10" >10</option>
             <option value="11" >11</option>
             <option value="12" >12</option>
-          </select>
-          <select class="day">
+          </select> -->
+          <!-- <select class="day">
             <option selected disabled>--Choose an option--</option>
             <option value="1" >1</option>
             <option value="2" >2</option>
@@ -75,7 +80,7 @@
             <option value="29"  id="29">29</option>
             <option value="30"  id="30">30</option>
             <option value="31"  id="31">31</option>
-          </select> 
+          </select>  -->
           </div> <!-- birthdayform -->
       </div> <!-- title -->
 
@@ -210,7 +215,7 @@
         <div class="musician-content">
           
 
-          
+
         </div>
 
 
