--- a/project/index.html
+++ b/project/index.html
@@ -32,7 +32,7 @@
 
 
 
-          <!-- <select class="month">
+          <!-- <select ="month">
             <option selected disabled>--Choose an option--</option>
             <option value="1" >1</option>
             <option value="2" >2</option>
@@ -47,7 +47,7 @@
             <option value="11" >11</option>
             <option value="12" >12</option>
           </select> -->
-          <!-- <select class="day">
+          <!-- <select ="day">
             <option selected disabled>--Choose an option--</option>
             <option value="1" >1</option>
             <option value="2" >2</option>
@@ -84,7 +84,7 @@
           </div> <!-- birthdayform -->
       </div> <!-- title -->
 
-     <button class="listen button">Listen!</button>
+     <button class="listen button" id="listen">Listen!</button>
     </div> <!-- enter -->
     <!-- right click mozart -->
     <div class="browse-banner">
