--- a/project/index.html
+++ b/project/index.html
@@ -27,12 +27,12 @@
           Birthday?
         </h2>
           <div class="birthdayform">
-            <input type="text" class="month" maxlength="2">
-            <input type="text" class='day' maxlength="2">
+            <input type="text" class="month" maxlength="2" max="12">
+            <input type="text" class='day' maxlength="2" max="31">
 
 
 
-          <!-- <select ="month">
+          <!-- <select class="month">
             <option selected disabled>--Choose an option--</option>
             <option value="1" >1</option>
             <option value="2" >2</option>
@@ -47,7 +47,7 @@
             <option value="11" >11</option>
             <option value="12" >12</option>
           </select> -->
-          <!-- <select ="day">
+          <!-- <select class="day">
             <option selected disabled>--Choose an option--</option>
             <option value="1" >1</option>
             <option value="2" >2</option>
