--- a/project/index.html
+++ b/project/index.html
@@ -27,12 +27,12 @@
           Birthday?
         </h2>
           <div class="birthdayform">
-            <input type="text" class="month" maxlength="2" max="12">
-            <input type="text" class='day' maxlength="2" max="31">
+            <!-- <input type="text" class="month" maxlength="2" max="12" value="1"> -->
+            <!-- <input type="text" class='day' maxlength="2" max="31" value="1"> -->
 
 
 
-          <!-- <select class="month">
+          <select class="month">
             <option selected disabled>--Choose an option--</option>
             <option value="1" >1</option>
             <option value="2" >2</option>
@@ -46,8 +46,8 @@
             <option value="10" >10</option>
             <option value="11" >11</option>
             <option value="12" >12</option>
-          </select> -->
-          <!-- <select class="day">
+          </select> 
+          <select class="day">
             <option selected disabled>--Choose an option--</option>
             <option value="1" >1</option>
             <option value="2" >2</option>
@@ -80,11 +80,11 @@
             <option value="29"  id="29">29</option>
             <option value="30"  id="30">30</option>
             <option value="31"  id="31">31</option>
-          </select>  -->
+          </select>  
           </div> <!-- birthdayform -->
       </div> <!-- title -->
 
-     <button class="listen button" id="listen">Listen!</button>
+     <button type="submit" name="submit" value="submit" class="listen button" id="listen">Listen!</button>
     </div> <!-- enter -->
     <!-- right click mozart -->
     <div class="browse-banner">
