--- a/project/index.html
+++ b/project/index.html
@@ -32,7 +32,7 @@
 
 
 
-          <select class="month">
+          <select class="month" id="month">
             <option selected disabled>--Choose an option--</option>
             <option value="1" >1</option>
             <option value="2" >2</option>
@@ -47,7 +47,7 @@
             <option value="11" >11</option>
             <option value="12" >12</option>
           </select> 
-          <select class="day">
+          <select class="day" id="day">
             <option selected disabled>--Choose an option--</option>
             <option value="1" >1</option>
             <option value="2" >2</option>
