--- a/project/index.html
+++ b/project/index.html
@@ -13,7 +13,7 @@
 <body class="noscroll">
 <div class="all">
   <button class="button hidden" id="modal-open">Enter Birthday?</button>
-  <div class="headerbox" id="modal">
+  <div class="headerbox fadein " id="modal">
     <div class="snowman">
       <h1>
         Do you wanna listen to classical music?      
@@ -99,7 +99,7 @@
   
   
   
-  <main id="main" class="hidden">
+  <main id="main" class="hidden fadein ">
     <div class="musician-banner">
         <ul class="musician">
           <li id="m1">
