--- a/project/index.html
+++ b/project/index.html
@@ -33,7 +33,7 @@
 
 
           <select class="month" id="month">
-            <option selected disabled>--Choose an option--</option>
+            <option selected disabled class="option">--Choose an option--</option>
             <option value="1" >1</option>
             <option value="2" >2</option>
             <option value="3" >3</option>
@@ -48,7 +48,7 @@
             <option value="12" >12</option>
           </select> 
           <select class="day" id="day">
-            <option selected disabled>--Choose an option--</option>
+            <option selected disabled class="option">--Choose an option--</option>
             <option value="1" >1</option>
             <option value="2" >2</option>
             <option value="3" >3</option>
@@ -232,6 +232,11 @@
     </div> <!-- musician -->
   </main>
 
+  <div class="infor-box">
+    <div class="infor-container">
+
+    </div> <!-- infor-container -->
+  </div> <!-- infor-box -->
 
 </div> <!-- all -->
 <script src="zodiacjavascript.js"></script>
