--- a/project/index.html
+++ b/project/index.html
@@ -13,6 +13,8 @@
 <body class="noscroll">
 <div class="all">
   <button class="button hidden" id="modal-open">Enter Birthday?</button>
+
+
   <div class="headerbox fadein " id="modal">
     <div class="snowman">
       <h1>
@@ -96,7 +98,6 @@
 
     </div>  <!-- browse -->
   </div>  <!-- herderbox -->
-  
   
   
   <main id="main" class="hidden fadein ">
@@ -232,11 +233,20 @@
     </div> <!-- musician -->
   </main>
 
+
   <div class="infor-box">
     <div class="infor-container">
-
+      
+      <img src="material/image/liszt.jpeg" alt="" class="thisimage">
+      <div class="infor-content">
+        <h2 class="thisname"></h2>
+        <h3 class="thismusic"></h3>
+        <p class="thisdescription"></p>
+        <audio src="" class="thissound"></audio>
+      </div> <!-- infor-content -->
     </div> <!-- infor-container -->
   </div> <!-- infor-box -->
+
 
 </div> <!-- all -->
 <script src="zodiacjavascript.js"></script>
