--- a/project/index.html
+++ b/project/index.html
@@ -234,17 +234,18 @@
   </main>
 
 
-  <div class="infor-box">
+  <div class="infor-box" id="infor-box">
+    <div class="closeinfor" onclick="closeinformodal()"></div>
     <div class="infor-container">
       <div class="imageframe-box">
         <div class="imageframe"></div>
-        <img src="material/image/liszt.jpeg" alt="" class="thisimage">
+        <img src="" alt="" class="thisimage">
       </div> <!-- imageframe-box -->
       <div class="infor-content">
         <h2 class="thisname"></h2>
         <h3 class="thismusic"></h3>
-        <p class="thisdescription"></p>
         <audio src="" class="thissound"></audio>
+        <p class="thisdescription"></p>
       </div> <!-- infor-content -->
     </div> <!-- infor-container -->
   </div> <!-- infor-box -->
