--- a/project/index.html
+++ b/project/index.html
@@ -234,7 +234,7 @@
   </main>
 
 
-  <div class="infor-box" id="infor-box">
+  <div class="infor-box hidden" id="infor-box">
     <div class="closeinfor" onclick="closeinformodal()"></div>
     <div class="infor-container">
       <div class="imageframe-box">
