--- a/project/index.html
+++ b/project/index.html
@@ -239,13 +239,13 @@
     <div class="infor-container">
       <div class="imageframe-box">
         <div class="imageframe"></div>
-        <img src="" alt="" class="thisimage">
+        <img src="" alt="" class="thisimage" id="thisimage">
       </div> <!-- imageframe-box -->
       <div class="infor-content">
-        <h2 class="thisname"></h2>
-        <h3 class="thismusic"></h3>
-        <audio src="" class="thissound"></audio>
-        <p class="thisdescription"></p>
+        <h2 class="thisname" id="thisname"></h2>
+        <h3 class="thismusic" id="thismusic"></h3>
+        <audio src="" class="thissound" id="thissound"></audio>
+        <p class="thisdescription" id="thisdescription"></p>
       </div> <!-- infor-content -->
     </div> <!-- infor-container -->
   </div> <!-- infor-box -->
