--- a/project/index.html
+++ b/project/index.html
@@ -91,7 +91,7 @@
     <!-- right click mozart -->
     <div class="browse-banner">
       <h2 id="browse-title">Or Browse?</h2>
-      <h3>Mozart Loves you</h3>
+      <h3 id="mozartlovesu">Mozart Loves you</h3>
       <div class="mozartsmall" id="modal-close"></div>
       <!-- <img src="material/image/mozartsmall.jpg" alt="mozartsmall" id="mozartsmall mozarthidden"> -->
       <!-- <button class="close button">Close</button> -->
@@ -103,7 +103,7 @@
   <main id="main" class="hidden fadein ">
     <div class="musician-banner">
         <ul class="musician">
-          <li id="m1">
+          <li id="m1 bach">
             <div class="card">
               <img src="material/image/bach.jpg" alt="1" class="frontface">
               <div class="backface">
@@ -112,7 +112,7 @@
            </div>
           </li>
 
-          <li id="m2">
+          <li id="m2 beethoven">
             <div class="card">
               <img src="material/image/beethoven.jpg" alt="2" class="frontface">
               <div class="backface">
@@ -121,7 +121,7 @@
              </div>
           </li>
 
-          <li id="m3">
+          <li id="m3 chopin">
             <div class="card">
               <img src="material/image/chopin.jpg" alt="3" class="frontface">
               <div class="backface">
@@ -130,7 +130,7 @@
             </div>
           </li>
 
-          <li id="m4">
+          <li id="m4 debussy">
             <div class="card">
               <img src="material/image/debussy.jpg" alt="4" class="frontface">
               <div class="backface">
@@ -139,7 +139,7 @@
             </div>
           </li>
 
-          <li id="m5">
+          <li id="m5 liszt01">
             <div class="card">
               <img src="material/image/liszt.jpeg" alt="5" class="frontface">
               <div class="backface">
@@ -148,7 +148,7 @@
            </div>
           </li>
 
-          <li id="m6">
+          <li id="m6 mendlson">
             <div class="card">
               <img src="material/image/mendelson.jpeg" alt="6" class="frontface">
               <div class="backface">
@@ -157,7 +157,7 @@
             </div>
           </li>
 
-          <li id="m7">
+          <li id="m7 mozart01">
             <div class="card">
               <img src="material/image/mozart.jpg" alt="7" class="frontface">
               <div class="backface">
@@ -166,7 +166,7 @@
             </div>
           </li>
 
-          <li id="m8">
+          <li id="m8 sayie">
             <div class="card">
               <img src="material/image/satie.jpg" alt="8" class="frontface">
               <div class="backface">
@@ -175,7 +175,7 @@
            </div>
           </li>
 
-          <li id="m9">
+          <li id="m9 schubert">
             <div class="card">
               <img src="material/image/schubert.jpg" alt="9" class="frontface">
               <div class="backface">
@@ -184,7 +184,7 @@
            </div>
           </li>
 
-          <li id="m10">
+          <li id="m10 schumann">
             <div class="card">
               <img src="material/image/schumann.jpg" alt="10" class="frontface">
               <div class="backface">
@@ -193,7 +193,7 @@
            </div>
           </li>
 
-          <li id="m11">
+          <li id="m11 liszt02">
             <div class="card">
               <img src="material/image/liszt2.jpg" alt="11" class="frontface">
               <div class="backface">
@@ -202,7 +202,7 @@
             </div>
           </li>
 
-          <li id="m12">
+          <li id="m12 mozart02">
             <div class="card">
               <img src="material/image/mozart2.jpg" alt="12" class="frontface">
               <div class="backface">
