--- a/project/index.html
+++ b/project/index.html
@@ -103,7 +103,7 @@
   <main id="main" class="hidden fadein ">
     <div class="musician-banner">
         <ul class="musician">
-          <li id="m1 bach">
+          <li id="m1" class="bach">
             <div class="card">
               <img src="material/image/bach.jpg" alt="1" class="frontface">
               <div class="backface">
@@ -112,7 +112,7 @@
            </div>
           </li>
 
-          <li id="m2 beethoven">
+          <li id="m2" class="beethoven">
             <div class="card">
               <img src="material/image/beethoven.jpg" alt="2" class="frontface">
               <div class="backface">
@@ -121,7 +121,7 @@
              </div>
           </li>
 
-          <li id="m3 chopin">
+          <li id="m3" class="chopin">
             <div class="card">
               <img src="material/image/chopin.jpg" alt="3" class="frontface">
               <div class="backface">
@@ -130,7 +130,7 @@
             </div>
           </li>
 
-          <li id="m4 debussy">
+          <li id="m4" class="debussy">
             <div class="card">
               <img src="material/image/debussy.jpg" alt="4" class="frontface">
               <div class="backface">
@@ -139,7 +139,7 @@
             </div>
           </li>
 
-          <li id="m5 liszt01">
+          <li id="m5" class="liszt01">
             <div class="card">
               <img src="material/image/liszt.jpeg" alt="5" class="frontface">
               <div class="backface">
@@ -148,7 +148,7 @@
            </div>
           </li>
 
-          <li id="m6 mendlson">
+          <li id="m6" class="mendlson">
             <div class="card">
               <img src="material/image/mendelson.jpeg" alt="6" class="frontface">
               <div class="backface">
@@ -157,7 +157,7 @@
             </div>
           </li>
 
-          <li id="m7 mozart01">
+          <li id="m7" class="mozart01">
             <div class="card">
               <img src="material/image/mozart.jpg" alt="7" class="frontface">
               <div class="backface">
@@ -166,7 +166,7 @@
             </div>
           </li>
 
-          <li id="m8 sayie">
+          <li id="m8" class="satie">
             <div class="card">
               <img src="material/image/satie.jpg" alt="8" class="frontface">
               <div class="backface">
@@ -175,7 +175,7 @@
            </div>
           </li>
 
-          <li id="m9 schubert">
+          <li id="m9" class="schubert">
             <div class="card">
               <img src="material/image/schubert.jpg" alt="9" class="frontface">
               <div class="backface">
@@ -184,7 +184,7 @@
            </div>
           </li>
 
-          <li id="m10 schumann">
+          <li id="m10" class="schumann">
             <div class="card">
               <img src="material/image/schumann.jpg" alt="10" class="frontface">
               <div class="backface">
@@ -193,7 +193,7 @@
            </div>
           </li>
 
-          <li id="m11 liszt02">
+          <li id="m11" class="liszt02">
             <div class="card">
               <img src="material/image/liszt2.jpg" alt="11" class="frontface">
               <div class="backface">
@@ -202,7 +202,7 @@
             </div>
           </li>
 
-          <li id="m12 mozart02">
+          <li id="m12" class="mozart02">
             <div class="card">
               <img src="material/image/mozart2.jpg" alt="12" class="frontface">
               <div class="backface">
@@ -248,7 +248,8 @@
         <p class="thisdescription" id="thisdescription"></p>
       </div> <!-- infor-content -->
     </div> <!-- infor-container -->
-  </div> <!-- infor-box -->
+  </div> 
+  <!-- infor-box -->
 
 
 </div> <!-- all -->
