--- a/project/index.html
+++ b/project/index.html
@@ -103,7 +103,7 @@
   <main id="main" class="hidden fadein ">
     <div class="musician-banner">
         <ul class="musician">
-          <li id="m1" class="bach">
+          <li id="m1" class="btnbach">
             <div class="card">
               <img src="material/image/bach.jpg" alt="1" class="frontface">
               <div class="backface">
@@ -112,7 +112,7 @@
            </div>
           </li>
 
-          <li id="m2" class="beethoven">
+          <li id="m2" class="btnbeethoven">
             <div class="card">
               <img src="material/image/beethoven.jpg" alt="2" class="frontface">
               <div class="backface">
@@ -121,7 +121,7 @@
              </div>
           </li>
 
-          <li id="m3" class="chopin">
+          <li id="m3" class="btnchopin">
             <div class="card">
               <img src="material/image/chopin.jpg" alt="3" class="frontface">
               <div class="backface">
@@ -130,7 +130,7 @@
             </div>
           </li>
 
-          <li id="m4" class="debussy">
+          <li id="m4" class="btndebussy">
             <div class="card">
               <img src="material/image/debussy.jpg" alt="4" class="frontface">
               <div class="backface">
@@ -139,7 +139,7 @@
             </div>
           </li>
 
-          <li id="m5" class="liszt01">
+          <li id="m5" class="btnliszt01">
             <div class="card">
               <img src="material/image/liszt.jpeg" alt="5" class="frontface">
               <div class="backface">
@@ -148,7 +148,7 @@
            </div>
           </li>
 
-          <li id="m6" class="mendlson">
+          <li id="m6" class="btnmendlson">
             <div class="card">
               <img src="material/image/mendelson.jpeg" alt="6" class="frontface">
               <div class="backface">
@@ -157,7 +157,7 @@
             </div>
           </li>
 
-          <li id="m7" class="mozart01">
+          <li id="m7" class="btnmozart01">
             <div class="card">
               <img src="material/image/mozart.jpg" alt="7" class="frontface">
               <div class="backface">
@@ -166,7 +166,7 @@
             </div>
           </li>
 
-          <li id="m8" class="satie">
+          <li id="m8" class="btnsatie">
             <div class="card">
               <img src="material/image/satie.jpg" alt="8" class="frontface">
               <div class="backface">
@@ -175,7 +175,7 @@
            </div>
           </li>
 
-          <li id="m9" class="schubert">
+          <li id="m9" class="btnschubert">
             <div class="card">
               <img src="material/image/schubert.jpg" alt="9" class="frontface">
               <div class="backface">
@@ -184,7 +184,7 @@
            </div>
           </li>
 
-          <li id="m10" class="schumann">
+          <li id="m10" class="btnschumann">
             <div class="card">
               <img src="material/image/schumann.jpg" alt="10" class="frontface">
               <div class="backface">
@@ -193,7 +193,7 @@
            </div>
           </li>
 
-          <li id="m11" class="liszt02">
+          <li id="m11" class="btnliszt02">
             <div class="card">
               <img src="material/image/liszt2.jpg" alt="11" class="frontface">
               <div class="backface">
@@ -202,7 +202,7 @@
             </div>
           </li>
 
-          <li id="m12" class="mozart02">
+          <li id="m12" class="btnmozart02">
             <div class="card">
               <img src="material/image/mozart2.jpg" alt="12" class="frontface">
               <div class="backface">
