--- a/project/index.html
+++ b/project/index.html
@@ -244,7 +244,7 @@
       <div class="infor-content">
         <h2 class="thisname" id="thisname"></h2>
         <h3 class="thismusic" id="thismusic"></h3>
-        <audio src="" class="thissound" id="thissound"></audio>
+        <audio controls autoplay src="material/music/bach.mp3" class="thissound" id="thissound" type="audio/mpeg"></audio>
         <p class="thisdescription" id="thisdescription"></p>
       </div> <!-- infor-content -->
     </div> <!-- infor-container -->
