--- a/project/index.html
+++ b/project/index.html
@@ -244,7 +244,15 @@
       <div class="infor-content">
         <h2 class="thisname" id="thisname"></h2>
         <h3 class="thismusic" id="thismusic"></h3>
-        <audio controls autoplay src="material/music/bach.mp3" class="thissound" id="thissound" type="audio/mpeg"></audio>
+
+
+
+
+
+        
+        <audio controls autoplay  class="thissound" id="thissound" type="audio/mpeg" preload="true">
+        <source src="material/music/bach.mp3">
+        </audio>
         <p class="thisdescription" id="thisdescription"></p>
       </div> <!-- infor-content -->
     </div> <!-- infor-container -->
