--- a/project/index.html
+++ b/project/index.html
@@ -253,7 +253,7 @@
             <span class="bar bar4"></span>
             <span class="bar bar5"></span>
           </div>
-          <audio controls autoplay loop class="thissound" id="thissound" type="audio/mpeg" preload="true">
+          <audio controls autoplay loop class="thisaudio" id="thisaudio" type="audio/mpeg" preload="true">
             <source src="material/music/bach.mp3">
           </audio>
           <figcaption>
