--- a/project/index.html
+++ b/project/index.html
@@ -35,7 +35,7 @@
 
 
           <select class="month" id="month">
-            <option selected disabled class="option">--Choose an option--</option>
+            <option selected disabled class="option" value="0">--Choose an option--</option>
             <option value="1" >1</option>
             <option value="2" >2</option>
             <option value="3" >3</option>
@@ -50,7 +50,7 @@
             <option value="12" >12</option>
           </select> 
           <select class="day" id="day">
-            <option selected disabled class="option">--Choose an option--</option>
+            <option selected disabled class="option" value="0">--Choose an option--</option>
             <option value="1" >1</option>
             <option value="2" >2</option>
             <option value="3" >3</option>
@@ -103,108 +103,108 @@
   <main id="main" class="hidden fadein ">
     <div class="musician-banner">
         <ul class="musician">
-          <li id="m1" class="btnbach">
+          <li id="btnbach" class="btnbach m1">
             <div class="card">
-              <img src="material/image/bach.jpg" alt="1" class="frontface">
+              <img src="material/image/square/bach.jpg" alt="1" class="frontface">
               <div class="backface">
                 <h3>Bach</h3>
               </div>
            </div>
           </li>
 
-          <li id="m2" class="btnbeethoven">
+          <li id="btnbeethoven" class="btnbeethoven m2">
             <div class="card">
-              <img src="material/image/beethoven.jpg" alt="2" class="frontface">
+              <img src="material/image/square/beethoven.jpg" alt="2" class="frontface">
               <div class="backface">
                 <h3>Beethoven</h3>
               </div>
              </div>
           </li>
 
-          <li id="m3" class="btnchopin">
+          <li id="btnchopin" class="btnchopin m3">
             <div class="card">
-              <img src="material/image/chopin.jpg" alt="3" class="frontface">
+              <img src="material/image/square/chopin.jpg" alt="3" class="frontface">
               <div class="backface">
                 <h3>Chopin</h3>
               </div>
             </div>
           </li>
 
-          <li id="m4" class="btndebussy">
+          <li id="btndebussy" class="btndebussy m4">
             <div class="card">
-              <img src="material/image/debussy.jpg" alt="4" class="frontface">
+              <img src="material/image/square/debussy.jpg" alt="4" class="frontface">
               <div class="backface">
                 <h3>Debussy</h3>
               </div>
             </div>
           </li>
 
-          <li id="m5" class="btnliszt01">
+          <li id="btnliszt01" class="btnliszt01 m5">
             <div class="card">
-              <img src="material/image/liszt.jpeg" alt="5" class="frontface">
+              <img src="material/image/square/liszt.jpeg" alt="5" class="frontface">
               <div class="backface">
                 <h3>Liszt</h3>
               </div>
            </div>
           </li>
 
-          <li id="m6" class="btnmendlson">
+          <li id="btnmendlson" class="btnmendlson m6">
             <div class="card">
-              <img src="material/image/mendelson.jpeg" alt="6" class="frontface">
+              <img src="material/image/square/mendelson.jpeg" alt="6" class="frontface">
               <div class="backface">
                 <h3>Mendelson</h3>
               </div>
             </div>
           </li>
 
-          <li id="m7" class="btnmozart01">
+          <li id="btnmozart01" class="btnmozart01 m7">
             <div class="card">
-              <img src="material/image/mozart.jpg" alt="7" class="frontface">
+              <img src="material/image/square/mozart.jpg" alt="7" class="frontface">
               <div class="backface">
                 <h3>Mozart</h3>
               </div>
             </div>
           </li>
 
-          <li id="m8" class="btnsatie">
+          <li id="btnsatie" class="btnsatie m8">
             <div class="card">
-              <img src="material/image/satie.jpg" alt="8" class="frontface">
+              <img src="material/image/square/satie.jpg" alt="8" class="frontface">
               <div class="backface">
                 <h3>Satie</h3>
               </div>
            </div>
           </li>
 
-          <li id="m9" class="btnschubert">
+          <li id="btnschubert" class="btnschubert m9">
             <div class="card">
-              <img src="material/image/schubert.jpg" alt="9" class="frontface">
+              <img src="material/image/square/schubert.jpg" alt="9" class="frontface">
               <div class="backface">
                 <h3>Schubert</h3>
               </div>
            </div>
           </li>
 
-          <li id="m10" class="btnschumann">
+          <li id="btnschumann" class="btnschumann m10">
             <div class="card">
-              <img src="material/image/schumann.jpg" alt="10" class="frontface">
+              <img src="material/image/square/schumann.jpg" alt="10" class="frontface">
               <div class="backface">
                 <h3>Schumann</h3>
               </div>
            </div>
           </li>
 
-          <li id="m11" class="btnliszt02">
+          <li id="btnliszt02" class="btnliszt02 m11">
             <div class="card">
-              <img src="material/image/liszt2.jpg" alt="11" class="frontface">
+              <img src="material/image/square/liszt2.jpg" alt="11" class="frontface">
               <div class="backface">
                 <h3>Liszt</h3>
               </div>
             </div>
           </li>
 
-          <li id="m12" class="btnmozart02">
+          <li id="btnmozart02" class="btnmozart02 m12">
             <div class="card">
-              <img src="material/image/mozart2.jpg" alt="12" class="frontface">
+              <img src="material/image/square/mozart2.jpg" alt="12" class="frontface">
               <div class="backface">
                 <h3>Mozart</h3>
               </div>
