--- a/project/index.html
+++ b/project/index.html
@@ -103,7 +103,7 @@
   <main id="main" class="hidden fadein ">
     <div class="musician-banner">
         <ul class="musician">
-          <li id="btnbach" class="btnbach m1">
+          <li id="btnbach" class="btnbach m1" onclick="musicianFlipCard(btnbach)">
             <div class="card">
               <img src="material/image/square/bach.jpg" alt="1" class="frontface">
               <div class="backface">
