aaaaaaaaaa success on calculation

--- a/project/index.html
+++ b/project/index.html
@@ -86,7 +86,7 @@
           </div> <!-- birthdayform -->
       </div> <!-- title -->
 
-     <button type="submit" name="submit" value="submit" class="listen button" id="listen">Listen!</button>
+     <button type="submit" name="submit" value="submit" class="listen button" id="listen" onclick="information()">Listen!</button>
     </div> <!-- enter -->
     <!-- right click mozart -->
     <div class="browse-banner">
