--- a/project/index.html
+++ b/project/index.html
@@ -103,7 +103,7 @@
   <main id="main" class="hidden fadein ">
     <div class="musician-banner">
         <ul class="musician">
-          <li id="btnbach" class="btnbach m1" onclick="musicianFlipCard(btnbach)">
+          <li id="btnbach" class=" m1 musicbtn" onclick="musicianFlipCard()">
             <div class="card">
               <img src="material/image/square/bach.jpg" alt="1" class="frontface">
               <div class="backface">
@@ -112,7 +112,7 @@
            </div>
           </li>
 
-          <li id="btnbeethoven" class="btnbeethoven m2">
+          <li id="btnbeethoven" class=" m2 musicbtn" onclick="musicianFlipCard()">
             <div class="card">
               <img src="material/image/square/beethoven.jpg" alt="2" class="frontface">
               <div class="backface">
@@ -121,7 +121,7 @@
              </div>
           </li>
 
-          <li id="btnchopin" class="btnchopin m3">
+          <li id="btnchopin" class=" m3 musicbtn" onclick="musicianFlipCard()">
             <div class="card">
               <img src="material/image/square/chopin.jpg" alt="3" class="frontface">
               <div class="backface">
@@ -130,7 +130,7 @@
             </div>
           </li>
 
-          <li id="btndebussy" class="btndebussy m4">
+          <li id="btndebussy" class=" m4 musicbtn" onclick="musicianFlipCard()">
             <div class="card">
               <img src="material/image/square/debussy.jpg" alt="4" class="frontface">
               <div class="backface">
@@ -139,7 +139,7 @@
             </div>
           </li>
 
-          <li id="btnliszt01" class="btnliszt01 m5">
+          <li id="btnliszt01" class=" m5 musicbtn">
             <div class="card">
               <img src="material/image/square/liszt.jpeg" alt="5" class="frontface">
               <div class="backface">
@@ -148,7 +148,7 @@
            </div>
           </li>
 
-          <li id="btnmendlson" class="btnmendlson m6">
+          <li id="btnmendlson" class=" m6 musicbtn">
             <div class="card">
               <img src="material/image/square/mendelson.jpeg" alt="6" class="frontface">
               <div class="backface">
@@ -157,7 +157,7 @@
             </div>
           </li>
 
-          <li id="btnmozart01" class="btnmozart01 m7">
+          <li id="btnmozart01" class=" m7 musicbtn">
             <div class="card">
               <img src="material/image/square/mozart.jpg" alt="7" class="frontface">
               <div class="backface">
@@ -166,7 +166,7 @@
             </div>
           </li>
 
-          <li id="btnsatie" class="btnsatie m8">
+          <li id="btnsatie" class=" m8 musicbtn">
             <div class="card">
               <img src="material/image/square/satie.jpg" alt="8" class="frontface">
               <div class="backface">
@@ -175,7 +175,7 @@
            </div>
           </li>
 
-          <li id="btnschubert" class="btnschubert m9">
+          <li id="btnschubert" class=" m9 musicbtn">
             <div class="card">
               <img src="material/image/square/schubert.jpg" alt="9" class="frontface">
               <div class="backface">
@@ -184,7 +184,7 @@
            </div>
           </li>
 
-          <li id="btnschumann" class="btnschumann m10">
+          <li id="btnschumann" class=" m10 musicbtn">
             <div class="card">
               <img src="material/image/square/schumann.jpg" alt="10" class="frontface">
               <div class="backface">
@@ -193,7 +193,7 @@
            </div>
           </li>
 
-          <li id="btnliszt02" class="btnliszt02 m11">
+          <li id="btnliszt02" class=" m11 musicbtn">
             <div class="card">
               <img src="material/image/square/liszt2.jpg" alt="11" class="frontface">
               <div class="backface">
@@ -202,7 +202,7 @@
             </div>
           </li>
 
-          <li id="btnmozart02" class="btnmozart02 m12">
+          <li id="btnmozart02" class=" m12 musicbtn">
             <div class="card">
               <img src="material/image/square/mozart2.jpg" alt="12" class="frontface">
               <div class="backface">
@@ -256,7 +256,7 @@
             <span class="bar bar5"></span>
           </div>
           <audio controls autoplay preload="metadata" loop class="thisaudio" id="thisaudio" type="audio/mpeg" preload="true">
-            <source src="material/music/bach.mp3">
+            <source src="">
           </audio>
           
             <div class="music-toggle">
