--- a/project/index.html
+++ b/project/index.html
@@ -103,7 +103,7 @@
   <main id="main" class="hidden fadein ">
     <div class="musician-banner">
         <ul class="musician">
-          <li id="btnbach" class=" m1 musicbtn" onclick="musicianFlipCard()">
+          <li id="btnbach" class=" m1 musicbtn">
             <div class="card">
               <img src="material/image/square/bach.jpg" alt="1" class="frontface">
               <div class="backface">
@@ -112,7 +112,7 @@
            </div>
           </li>
 
-          <li id="btnbeethoven" class=" m2 musicbtn" onclick="musicianFlipCard()">
+          <li id="btnbeethoven" class=" m2 musicbtn">
             <div class="card">
               <img src="material/image/square/beethoven.jpg" alt="2" class="frontface">
               <div class="backface">
@@ -121,7 +121,7 @@
              </div>
           </li>
 
-          <li id="btnchopin" class=" m3 musicbtn" onclick="musicianFlipCard()">
+          <li id="btnchopin" class=" m3 musicbtn">
             <div class="card">
               <img src="material/image/square/chopin.jpg" alt="3" class="frontface">
               <div class="backface">
@@ -130,7 +130,7 @@
             </div>
           </li>
 
-          <li id="btndebussy" class=" m4 musicbtn" onclick="musicianFlipCard()">
+          <li id="btndebussy" class=" m4 musicbtn">
             <div class="card">
               <img src="material/image/square/debussy.jpg" alt="4" class="frontface">
               <div class="backface">
