--- a/project/index.html
+++ b/project/index.html
@@ -103,7 +103,7 @@
   <main id="main" class="hidden fadein ">
     <div class="musician-banner">
         <ul class="musician">
-          <li id="btnbach" class=" m1 musicbtn">
+          <li id="bach" class=" m1 musicbtn">
             <div class="card">
               <img src="material/image/square/bach.jpg" alt="1" class="frontface">
               <div class="backface">
@@ -112,7 +112,7 @@
            </div>
           </li>
 
-          <li id="btnbeethoven" class=" m2 musicbtn">
+          <li id="beethoven" class=" m2 musicbtn">
             <div class="card">
               <img src="material/image/square/beethoven.jpg" alt="2" class="frontface">
               <div class="backface">
@@ -121,7 +121,7 @@
              </div>
           </li>
 
-          <li id="btnchopin" class=" m3 musicbtn">
+          <li id="chopin" class=" m3 musicbtn">
             <div class="card">
               <img src="material/image/square/chopin.jpg" alt="3" class="frontface">
               <div class="backface">
@@ -130,7 +130,7 @@
             </div>
           </li>
 
-          <li id="btndebussy" class=" m4 musicbtn">
+          <li id="debussy" class=" m4 musicbtn">
             <div class="card">
               <img src="material/image/square/debussy.jpg" alt="4" class="frontface">
               <div class="backface">
@@ -139,7 +139,7 @@
             </div>
           </li>
 
-          <li id="btnliszt01" class=" m5 musicbtn">
+          <li id="liszt01" class=" m5 musicbtn">
             <div class="card">
               <img src="material/image/square/liszt.jpeg" alt="5" class="frontface">
               <div class="backface">
@@ -148,7 +148,7 @@
            </div>
           </li>
 
-          <li id="btnmendlson" class=" m6 musicbtn">
+          <li id="mendlson" class=" m6 musicbtn">
             <div class="card">
               <img src="material/image/square/mendelson.jpeg" alt="6" class="frontface">
               <div class="backface">
@@ -157,7 +157,7 @@
             </div>
           </li>
 
-          <li id="btnmozart01" class=" m7 musicbtn">
+          <li id="mozart01" class=" m7 musicbtn">
             <div class="card">
               <img src="material/image/square/mozart.jpg" alt="7" class="frontface">
               <div class="backface">
@@ -166,7 +166,7 @@
             </div>
           </li>
 
-          <li id="btnsatie" class=" m8 musicbtn">
+          <li id="satie" class=" m8 musicbtn">
             <div class="card">
               <img src="material/image/square/satie.jpg" alt="8" class="frontface">
               <div class="backface">
@@ -175,7 +175,7 @@
            </div>
           </li>
 
-          <li id="btnschubert" class=" m9 musicbtn">
+          <li id="schubert" class=" m9 musicbtn">
             <div class="card">
               <img src="material/image/square/schubert.jpg" alt="9" class="frontface">
               <div class="backface">
@@ -184,7 +184,7 @@
            </div>
           </li>
 
-          <li id="btnschumann" class=" m10 musicbtn">
+          <li id="schumann" class=" m10 musicbtn">
             <div class="card">
               <img src="material/image/square/schumann.jpg" alt="10" class="frontface">
               <div class="backface">
@@ -193,7 +193,7 @@
            </div>
           </li>
 
-          <li id="btnliszt02" class=" m11 musicbtn">
+          <li id="liszt02" class=" m11 musicbtn">
             <div class="card">
               <img src="material/image/square/liszt2.jpg" alt="11" class="frontface">
               <div class="backface">
@@ -202,7 +202,7 @@
             </div>
           </li>
 
-          <li id="btnmozart02" class=" m12 musicbtn">
+          <li id="mozart02" class=" m12 musicbtn">
             <div class="card">
               <img src="material/image/square/mozart2.jpg" alt="12" class="frontface">
               <div class="backface">
