--- a/project/index.html
+++ b/project/index.html
@@ -106,110 +106,84 @@
           <li id="bach" class=" m1 musicbtn">
             <div class="card">
               <img src="material/image/square/bach.jpg" alt="1" class="frontface">
-              <div class="backface">
-                <h3>Bach</h3>
-              </div>
-           </div>
+              <input type="button"  value="Bach" class="backface">
+            </div>
           </li>
-
-
 
           <li id="beethoven" class=" m2 musicbtn">
             <div class="card">
               <img src="material/image/square/beethoven.jpg" alt="2" class="frontface">
-              <div class="backface">
-                <h3>Beethoven</h3>
-              </div>
+              <input type="button"  value="Beethoven" class="backface">
              </div>
           </li>
 
           <li id="chopin" class=" m3 musicbtn">
             <div class="card">
               <img src="material/image/square/chopin.jpg" alt="3" class="frontface">
-              <div class="backface">
-                <h3>Chopin</h3>
-              </div>
+              <input type="button"  value="Chopin"  class="backface">
             </div>
           </li>
 
           <li id="debussy" class=" m4 musicbtn">
             <div class="card">
               <img src="material/image/square/debussy.jpg" alt="4" class="frontface">
-              <div class="backface">
-                <h3>Debussy</h3>
-              </div>
+              <input type="button"  value="Debussy"  class="backface">
             </div>
           </li>
 
           <li id="liszt01" class=" m5 musicbtn">
             <div class="card">
               <img src="material/image/square/liszt.jpeg" alt="5" class="frontface">
-              <div class="backface">
-                <h3>Liszt</h3>
-              </div>
+              <input type="button"  value="Liszt"  class="backface">
            </div>
           </li>
 
           <li id="mendlson" class=" m6 musicbtn">
             <div class="card">
               <img src="material/image/square/mendelson.jpeg" alt="6" class="frontface">
-              <div class="backface">
-                <h3>Mendelson</h3>
-              </div>
+              <input type="button"  value="Mendelson"  class="backface">
             </div>
           </li>
 
           <li id="mozart01" class=" m7 musicbtn">
             <div class="card">
               <img src="material/image/square/mozart.jpg" alt="7" class="frontface">
-              <div class="backface">
-                <h3>Mozart</h3>
-              </div>
+              <input type="button"  value="Mozart"   class="backface">
             </div>
           </li>
 
           <li id="satie" class=" m8 musicbtn">
             <div class="card">
               <img src="material/image/square/satie.jpg" alt="8" class="frontface">
-              <div class="backface">
-                <h3>Satie</h3>
-              </div>
+              <input type="button"  value="Satie"   class="backface">
            </div>
           </li>
 
           <li id="schubert" class=" m9 musicbtn">
             <div class="card">
               <img src="material/image/square/schubert.jpg" alt="9" class="frontface">
-              <div class="backface">
-                <h3>Schubert</h3>
-              </div>
+              <input type="button"  value="Schubert" class="backface">
            </div>
           </li>
 
           <li id="schumann" class=" m10 musicbtn">
             <div class="card">
               <img src="material/image/square/schumann.jpg" alt="10" class="frontface">
-              <div class="backface">
-                <h3>Schumann</h3>
-              </div>
+              <input type="button"  value="Schumann" class="backface">
            </div>
           </li>
 
           <li id="liszt02" class=" m11 musicbtn">
             <div class="card">
               <img src="material/image/square/liszt2.jpg" alt="11" class="frontface">
-              <div class="backface">
-                <h3>Liszt</h3>
-              </div>
+              <input type="button"  value="Liszt" class="backface">
             </div>
           </li>
 
           <li id="mozart02" class=" m12 musicbtn">
             <div class="card">
               <img src="material/image/square/mozart2.jpg" alt="12" class="frontface">
-              <div class="backface">
-                <h3>Mozart</h3>
-              </div>
+              <input type="button"  value="Mozart" class="backface">
             </div>
           </li>
 
