--- a/project/index.html
+++ b/project/index.html
@@ -131,6 +131,8 @@
             </div>
           </li>
 
+<!-- -------------------------------------------- -->
+
           <li id="liszt01" class=" m5 musicbtn">
             <div class="card">
               <img src="material/image/square/liszt.jpeg" alt="5" class="frontface">
@@ -138,7 +140,7 @@
            </div>
           </li>
 
-          <li id="mendlson" class=" m6 musicbtn">
+          <li id="mendlsson" class=" m6 musicbtn">
             <div class="card">
               <img src="material/image/square/mendelson.jpeg" alt="6" class="frontface">
               <input type="button"  value="Mendelson"  class="backface">
@@ -158,6 +160,8 @@
               <input type="button"  value="Satie"   class="backface">
            </div>
           </li>
+
+<!-- --------------------------------------------------- -->
 
           <li id="schubert" class=" m9 musicbtn">
             <div class="card">
