--- a/project/index.html
+++ b/project/index.html
@@ -35,7 +35,7 @@
 
 
           <select class="month" id="month">
-            <option selected disabled class="option" value="0">--Choose an option--</option>
+            <option selected disabled class="option" value="0">--Choose a month--</option>
             <option value="1" >1</option>
             <option value="2" >2</option>
             <option value="3" >3</option>
@@ -50,7 +50,7 @@
             <option value="12" >12</option>
           </select> 
           <select class="day" id="day">
-            <option selected disabled class="option" value="0">--Choose an option--</option>
+            <option selected disabled class="option" value="0">--Choose a day--</option>
             <option value="1" >1</option>
             <option value="2" >2</option>
             <option value="3" >3</option>
@@ -224,7 +224,6 @@
       <div class="infor-content">
         
         <h2 class="thisname" id="thisname"></h2>
-
         
         <div class="play-music">
           <h3 class="thismusic" id="thismusic"></h3>
